--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="hearts-bg" id="heartsBg"></div>
 
     <!-- Background music -->
-    <audio id="bgMusic" loop preload="auto" muted>
+    <audio id="bgMusic" loop preload="auto" muted autoplay>
       <source src="Normal.mp3" type="audio/mpeg" />
     </audio>
 
@@ -35,6 +35,7 @@
           src="Logo.webm"
           loop
           muted
+          autoplay
           playsinline
           preload="auto"
           webkit-playsinline
