--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="hearts-bg" id="heartsBg"></div>
 
     <!-- Background music -->
-    <audio id="bgMusic" loop preload="auto" muted autoplay>
+    <audio id="bgMusic" loop preload="auto" muted>
       <source src="Normal.mp3" type="audio/mpeg" />
     </audio>
 
